@@ -16,7 +16,8 @@
     a survival curve object. 
 }
 \item{p0}{the initial state vector.  The names of this vector are used
-  as the names of the states in the output object.
+  as the names of the states in the output object.  If there are
+  multiple curves then \code{p0} can be a matrix with one row per curve.
 }
   \item{method}{
     use a product of discrete hazards, or a product of matrix exponentials.
@@ -25,25 +26,35 @@
   \item{...}{further arguments for other methods}
 }
 \details{
-  When using predicted survival curves from a Cox model, it is possible
-  to get predicted hazards that are greater than 1.  For this reason it is
-  safer to use exp(-hazard) rather than (1-hazard) as the multiplier for
-  the probability.  This is also the standard approach for ordinary
-  survival curves from a Cox model.  If the \code{method} argument is
-  not supplied and the input values are derived from a Cox model, this
-  is used as the default.
-
-  This approach is easy to use but has some caveats.  First, the input
-  curves must be consistent.  The routine checks as best it can, but is
-  easy fool.  If you fit two Cox models, obtain
+  On input the matrix should contain a set of predicted curves for each
+  possible transition, and NULL in other positions.  Each of the
+  predictions will have been obtained from the relevant Cox model. 
+  This approach for multistate curves is easy to use but has some
+  caveats.  
+  First, the input curves must be consistent.
+  The routine checks as best it can, but can easy be fooled.
+  For instance, if one were to fit two Cox models, obtain
   predictions for males and females from one, and for treatment A and B
   from the other, this routine will create two curves but they are
-  not meaningful.  A second is that standard errors are not produced.
+  not meaningful.
+  A second issue is that standard errors are not produced.
 
   The names of the resulting states are taken from the names of the
   vector of initial state probabilities.  If they are missing, then the
   dimnames of the input matrix are used, and lacking that the labels
   '1', '2', etc. are used.
+
+  For the usual Aalen-Johansen estimator the multiplier at each event
+  time is the matrix of hazards H (also written as I + dA).
+  When using predicted survival curves from a Cox model, however,
+  it is possible to get predicted hazards that are greater than 1, which
+  leads to probabilities less than 0.
+  If the \code{method} argument is not supplied and the input
+  curves are derived from a Cox model this routine instead uses the
+  approximation expm(H-I) as the multiplier, which always gives valid
+  probabilities.
+  (This is also the standard approach for ordinary
+  survival curves from a Cox model.) 
 }
 \value{a survfitms object}
 \author{Terry Therneau}
@@ -61,7 +72,8 @@ cfit1 <- coxph(Surv(etime, event=="pcm") ~ age + sex, mgus2)
 cfit2 <- coxph(Surv(etime, event=="death") ~ age + sex, mgus2)
 
 # predicted competing risk curves for a 72 year old with mspike of 1.2
-# (median values)
+# (median values), male and female.
+# The survfit call is a bit faster without standard errors.
 newdata <- expand.grid(sex=c("F", "M"), age=72, mspike=1.2)
 
 AJmat <- matrix(list(), 3,3)
