@@ -5,7 +5,7 @@ The source was converted to noweb when adding time-transform terms.
 
 The call starts out with the basic building of a model frame
 and proceeds from there.
-The normalizetime function is used to adjucate near ties in the time
+The aeqSurv function is used to adjucate near ties in the time
 variable, numerical precision issues that occur when users base
 caculations on days/365.25 instead of days.
 <<coxph>>=
@@ -38,7 +38,7 @@ coxph <- function(formula, data, weights, subset, na.action,
 	stop(paste("Cox model doesn't support \"", type,
 			  "\" survival data", sep=''))
     data.n <- nrow(Y)   #remember this before any time transforms
-    if (control$timefix) Y <- normalizetime(Y, replace=TRUE)
+    if (control$timefix) Y <- aeqSurv(Y)
     <<coxph-bothsides>>
         
     # The time transform will expand the data frame mf.  To do this
@@ -800,7 +800,7 @@ model.frame.coxph <- function(formula, ...) {
        if (!is.null(attr(Terms, "specials")$tt)) {
           # Do time transform
 	  tt <- eval(formula$call$tt)
-	  Y <- normalizetime(model.response(mf), replace=TRUE)
+	  Y <- aeqSurv(model.response(mf))
 	  strats <- attr(Terms, "specials")$strata
 	  if (length(strats)) {
 	      stemp <- untangle.specials(Terms, 'strata', 1)
