@@ -37,7 +37,7 @@ and a host of other issues.
 There is discussion of this general issue in the R FAQ: ``why doesn't R
 think these numbers are equal''.
 The Kaplan-Meier and Cox model both pay careful attention to ties, and
-so both now use the \code{normalizetime} routine to first preprocess
+so both now use the \code{aeqSurv} routine to first preprocess
 the time data.  It uses the same rules as \code{all.equal} to
 adjudicate ties and near ties.
 
@@ -166,7 +166,9 @@ an error message if it is accidentally there.
 
 <<survfit-formula>>=
 survfit.formula <- function(formula, data, weights, subset, 
-			    na.action, etype, id, istate, ...) {
+			    na.action, etype, id, istate, 
+                            timefix=TRUE, ...) {
+
     Call <- match.call()
     Call[[1]] <- as.name('survfit')  #make nicer printout for the user
     # create a copy of the call that has only the arguments we want,
@@ -238,7 +240,11 @@ survfit.formula <- function(formula, data, weights, subset,
     }
                          
     # Deal with the near-ties problem
-    newY <- normalizetime(Y)
+    if (!is.logical(timefix) || length(timefix) > 1)
+        stop("invalid value for timefix option")
+    if (timefix) newY <- aeqSurv(Y)
+    
+    # Call the appropriate helper function
     if (attr(Y, 'type') == 'left' || attr(Y, 'type') == 'interval')
         temp <-  survfitTurnbull(X, newY, casewt, ...)
     else if (attr(Y, 'type') == "right" || attr(Y, 'type')== "counting")
